# helmsman

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  helmsman  helmsman-manual  release-please-config.json
helmsman-cpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  build.sh  conanfile.txt
helmsman-cpp/include/: main-utils.h
helmsman-cpp/src/: CMakeLists.txt  main.cpp
helmsman-cpp/test/: CMakeLists.txt
helmsman-cpp/test/unit/: CMakeLists.txt  test-bin.cpp
helmsman-cpp/toolchains/: aarch64-toolchain.cmake
runtime/cpp/: .clang-format  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  conanfile.txt
runtime/cpp/apps/: CMakeLists.txt
runtime/cpp/apps/asr/: CMakeLists.txt
runtime/cpp/apps/asr/client/: CMakeLists.txt
runtime/cpp/apps/asr/client/src/: CMakeLists.txt  main-client.cpp
runtime/cpp/apps/asr/server/include/: acceptor.h  asr-task-sherpa.h  pch.h
runtime/cpp/apps/asr/server/src/: acceptor.cpp  asr-task-sherpa.cpp  common-types.cpp  main-server.cpp
runtime/cpp/apps/drm_test_red/: CMakeLists.txt  drm_test_red.cpp
runtime/cpp/apps/matting/: CMakeLists.txt
runtime/cpp/apps/matting/client/: CMakeLists.txt
runtime/cpp/apps/matting/client/include/: common-define.h  main-client.h
runtime/cpp/apps/matting/client/include/pipeline/: pipeline.h
runtime/cpp/apps/matting/client/src/: CMakeLists.txt  main-client.cpp  v1.3.1-load-onnx.cpp  v1.3.3-inference-out.cpp
runtime/cpp/apps/matting/client/src/pipeline/: pipeline.cpp
runtime/cpp/apps/matting/server/: CMakeLists.txt
runtime/cpp/apps/matting/server/include/: common-define.h  common-types.h
runtime/cpp/apps/matting/server/include/common/: common-define.h  data_structure.h  types.h
runtime/cpp/apps/matting/server/include/pipeline/: pipeline.h  recurrent-state-manager.h  single-slot-channel.h
runtime/cpp/apps/matting/server/src/: CMakeLists.txt  cli-help.h  main-server.cpp
runtime/cpp/apps/matting/server/src/input/: mp4-input-source.cpp
runtime/cpp/apps/matting/server/src/pipeline/: CMakeLists.txt  pipeline.cpp  recurrent-state-manager.cpp
runtime/cpp/cmake/: ArcFunctions.cmake  FetchGTest.cmake
runtime/cpp/cmake/templates/: system-info.h.in
runtime/cpp/cmake/toolchains/: aarch64-toolchain.cmake  rk3588s.cmake  rv1126bp.cmake
runtime/cpp/docs/en/: ADD_NEW_SOC.md  BUILD_SYSTEM.md
runtime/cpp/docs/zh-cn/: ADD_NEW_SOC_ZH_CN.md  BUILD_SYSTEM_ZH_CN.md  README_ZH_CN.md
runtime/cpp/libs/: CMakeLists.txt
runtime/cpp/libs/asr_engine/: CMakeLists.txt
runtime/cpp/libs/asr_engine/include/ASREngine/: pch.h
runtime/cpp/libs/asr_engine/include/ASREngine/common/: common-types.h  system-info.h
runtime/cpp/libs/asr_engine/include/ASREngine/recognizer/: recognizer-config.h  recognizer.h
runtime/cpp/libs/asr_engine/include/ASREngine/vad/: vad-config.h  vad.h
runtime/cpp/libs/asr_engine/src/: CMakeLists.txt
runtime/cpp/libs/asr_engine/src/common/: CMakeLists.txt  common-types.cpp  system-info.cpp
runtime/cpp/libs/asr_engine/src/recognizer/: CMakeLists.txt  recognizer-config.cpp  recognizer.cpp
runtime/cpp/libs/asr_engine/src/vad/: CMakeLists.txt  vad-config.cpp  vad.cpp
runtime/cpp/libs/asr_engine/src/wav-reader/: CMakeLists.txt  wav-reader.cpp
runtime/cpp/libs/cvkit/: CMakeLists.txt
runtime/cpp/libs/cvkit/src/: CMakeLists.txt
runtime/cpp/libs/cvkit/src/base/: CMakeLists.txt  base.cpp
runtime/cpp/libs/cvkit/src/common/: CMakeLists.txt  common-types.cpp  system-info.cpp
runtime/cpp/libs/dmakit/: CMakeLists.txt
runtime/cpp/libs/dmakit/include/DmaKit/: dma_buffer.h  pch.h
runtime/cpp/libs/dmakit/src/: CMakeLists.txt  dma_buffer.cpp
runtime/cpp/libs/drmkit/: CMakeLists.txt
runtime/cpp/libs/drmkit/include/DRMKit/: drm_display.h  pch.h
runtime/cpp/libs/drmkit/src/: CMakeLists.txt  drm_display.cpp
runtime/cpp/libs/mppkit/: CMakeLists.txt
runtime/cpp/libs/mppkit/include/MPPKit/: mpp_codec.h  mpp_decoder.h  mpp_encoder.h  pch.h
runtime/cpp/libs/mppkit/src/: CMakeLists.txt  mpp_codec.cpp  mpp_decoder.cpp  mpp_encoder.cpp
runtime/cpp/libs/network/: CMakeLists.txt
runtime/cpp/libs/network/include/Network/: pch.h
runtime/cpp/libs/network/src/: CMakeLists.txt
runtime/cpp/libs/network/src/base/: CMakeLists.txt  base-config.cpp  base.cpp  exception.cpp
runtime/cpp/libs/network/src/client/: CMakeLists.txt  client.cpp
runtime/cpp/libs/network/src/common/: CMakeLists.txt  common-types.cpp  system-info.cpp
runtime/cpp/libs/network/src/server/: CMakeLists.txt  server.cpp
runtime/cpp/libs/rgakit/: CMakeLists.txt
runtime/cpp/libs/rgakit/include/RGAKit/: pch.h  rga_composite.h  rga_crop.h  rga_cvtcolor.h  rga_flip.h  rga_operation.h  rga_resize.h  rga_rotate.h
runtime/cpp/libs/rgakit/src/: CMakeLists.txt  rga_composite.cpp  rga_crop.cpp  rga_cvtcolor.cpp  rga_flip.cpp  rga_resize.cpp  rga_rotate.cpp
runtime/cpp/libs/rknnkit/: CMakeLists.txt
runtime/cpp/libs/rknnkit/include/RKNNKit/: rknn-memory.h  rknn-query.h  utils.h
runtime/cpp/libs/rknnkit/src/: CMakeLists.txt  rknn-memory.cpp  rknn-query.cpp
runtime/cpp/libs/runtime/: CMakeLists.txt
runtime/cpp/libs/runtime/src/: CMakeLists.txt
runtime/cpp/libs/runtime/src/common/: CMakeLists.txt  common-types.cpp  system-info.cpp
runtime/cpp/libs/runtime/src/onnx/: CMakeLists.txt  onnx.cpp
runtime/cpp/libs/runtime/src/rknn/: CMakeLists.txt
runtime/cpp/libs/utils/: CMakeLists.txt
runtime/cpp/libs/utils/include/Utils/: pch.h
runtime/cpp/libs/utils/src/: CMakeLists.txt
runtime/cpp/libs/utils/src/common/: CMakeLists.txt  common-types.cpp  system-info.cpp
runtime/cpp/libs/utils/src/file/: CMakeLists.txt  file-utils.cpp
runtime/cpp/libs/utils/src/logger/: CMakeLists.txt  logger.cpp
runtime/cpp/libs/utils/src/math/: CMakeLists.txt  math-utils.cpp
runtime/cpp/libs/utils/src/others/: CMakeLists.txt  other-utils.cpp
runtime/cpp/src/: CMakeLists.txt  main.cpp
runtime/cpp/test/: CMakeLists.txt
runtime/cpp/test/libs/: CMakeLists.txt
runtime/cpp/test/libs/network/: CMakeLists.txt  test_network.cpp
runtime/cpp/test/unit/: CMakeLists.txt
(+298 files in other folders)
